[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Board.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Objects/BattleScene.gd" type="Script" id=4]
[ext_resource path="res://ArtAssets/ArrowTemp.png" type="Texture" id=5]
[ext_resource path="res://ArtAssets/Celly.png" type="Texture" id=6]
[ext_resource path="res://ArtAssets/Cat.png" type="Texture" id=7]
[ext_resource path="res://ArtAssets/Brock.png" type="Texture" id=8]
[ext_resource path="res://ArtAssets/Pitch.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.5, 37 )

[node name="Spatial" type="Spatial"]
pause_mode = 2
script = ExtResource( 4 )

[node name="Board" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1.1, 0, 1, 0 )

[node name="Orbs" type="Spatial" parent="."]

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 5.40139, 0 )
pixel_size = 0.1
billboard = 1

[node name="ClickBox" type="Spatial" parent="."]

[node name="Camera" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 23, 24 )

[node name="Control" type="Control" parent="."]
margin_left = -1164.0
margin_top = -17.0
margin_right = -140.0
margin_bottom = 583.0
rect_pivot_offset = Vector2( 203, 405 )
mouse_filter = 2

[node name="Knight" type="Button" parent="Control"]
margin_left = 1281.0
margin_top = 903.0
margin_right = 1544.0
margin_bottom = 1043.0

[node name="Archer" type="Button" parent="Control"]
margin_left = 2213.0
margin_top = 906.0
margin_right = 2483.0
margin_bottom = 1039.0

[node name="King" type="Button" parent="Control"]
margin_left = 1855.0
margin_top = 900.0
margin_right = 2134.0
margin_bottom = 1041.0

[node name="Wizard" type="Button" parent="Control"]
margin_left = 2602.0
margin_top = 901.0
margin_right = 2888.0
margin_bottom = 1038.0

[node name="Start" type="Button" parent="Control"]
margin_left = 2988.0
margin_top = 791.0
margin_right = 3053.0
margin_bottom = 863.0

[node name="Area2D" type="Area2D" parent="Control"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Area2D"]
position = Vector2( 514, 416 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Control/Area2D"]
position = Vector2( 514, 416 )
scale = Vector2( 1.0625, 1.15625 )
texture = ExtResource( 3 )

[node name="Arrow" type="Sprite" parent="Control/Area2D"]
position = Vector2( 514, 416 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
offset = Vector2( 0, -250 )

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 1996, 967 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="Control"]
position = Vector2( 1411, 968 )
texture = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="Control"]
position = Vector2( 2360, 973 )
texture = ExtResource( 7 )

[node name="Sprite4" type="Sprite" parent="Control"]
position = Vector2( 2740, 969 )
texture = ExtResource( 9 )

[connection signal="input_event" from="Control/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Control/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Control/Area2D" to="." method="_on_Area2D_mouse_exited"]
